reservation fix
